testcases/error/unknown_param.veryl
module unknown_param {
    inst u: unknown_param2 #( a: 1 );
}

module unknown_param2 {}
